# eWand

./: README.md
hardware/etc/: TPS55288 Design Calculation V1.0.xlsx
hardware/lib/: blank.kicad_wks  local.bak  local.kicad_sym
hardware/lib/local.pretty/: CP_Radial_D6.3mm_P2.50mm_L8mm_Horizontal.kicad_mod  CP_Radial_D6.3mm_P2.50mm_L8mm_Horizontal_Fli.kicad_mod  PG-HSOF-7-1.kicad_mod  T31000.kicad_mod  VH3.96-2AW.kicad_mod
hardware/lib/local_imported.pretty/: DFN-8_3x3.kicad_mod  QFN-13_MP3431_MNP.kicad_mod  RPM0026A-MFG.kicad_mod  VQFN-HR-15.kicad_mod
hardware/pcb/: .gitignore
hardware/pcb/controller/: eWand_controller.kicad_prl  eWand_controller.kicad_pro  eWand_controller.kicad_sch  fp-lib-table  sym-lib-table
hardware/pcb/core/: eWand_core.kicad_pcb  eWand_core.kicad_prl  eWand_core.kicad_pro  eWand_core.kicad_sch  half_bridge.kicad_sch  power_converters.kicad_sch
hardware/pcb/core/jlcpcb/: project.db
hardware/pcb/rp2_debugger_adapter/: eWand_rp2_debugger_adapter.kicad_pcb  eWand_rp2_debugger_adapter.kicad_prl  eWand_rp2_debugger_adapter.kicad_pro  eWand_rp2_debugger_adapter.kicad_sch
hardware/pcb/rp2_debugger_adapter/jlcpcb/: project.db
software/core/: .gitignore  CMakeLists.txt  openocd_board.cfg
software/core/src/: CMakeLists.txt  main.c
software/core/src/dcdc/: dcdc.c  dcdc.h
software/core/src/hadc/: hadc.c  hadc.h  hadc.pio
software/core/src/misc/: i2c_bus.c  i2c_bus.h  io_exp.c  io_exp.h  neopixel.c  neopixel.h  neopixel.pio  power_monitor.c  power_monitor.h
software/core/src/power_stage/: power_stage.c  power_stage.h  power_stage.pio
software/core/src/utils/: ladc.c  utils.h
